--- a/merchandise/templates/merchandise/add_merch.html
+++ b/merchandise/templates/merchandise/add_merch.html
@@ -43,6 +43,7 @@
 {% endblock %}
 
 {% block postloadjs %}
+{{ block.super }}
 <script type="text/javascript">
     $('.toast').toast('show');
 </script>
