--- a/merchandise/templates/merchandise/all_merch.html
+++ b/merchandise/templates/merchandise/all_merch.html
@@ -57,6 +57,7 @@
 {% endblock %}
 
 {% block postloadjs %}
+{{ block.super }}
 <script type="text/javascript">
     $('.toast').toast('show');
 </script>
@@ -78,11 +79,6 @@
     });
 </script>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        console.log('Page loaded'); // Add a console log statement to check if the page is loaded
-        // Your other JavaScript code here
-    });
-</script>
+
 
 {% endblock %}
