--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -100,6 +100,7 @@
 </main>
 {% endblock %}
 {% block postloadjs %}
+{{ block.super }}
 <script type="text/javascript">
     $('.toast').toast('show');
 </script>
