--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -4,12 +4,8 @@
 }
 
 
-.nav-link[aria-current="page"] {
-    text-decoration: underline wavy #f8c348 0.15rem;
-    text-underline-offset: 0.5rem;
-}
-
 /* News Letter */
+
 
 .newsletter-format {
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -250,20 +246,37 @@
 .form-control {
     color: black;
 }
+
+.custom-dropdown-menu,
 .second-navbar {
     background-color: #001f2b;
 }
 .second-navbar-li {
     padding-left: 25px;
     padding-right: 25px;
-    color: #eaeaea;
+    color: white;
 }
+
+.nav-link.active {
+    color: red;
+    background-color: red;
+    
+}
+.nav-link:hover {
+    background-color: #00415a;
+    color: white;
+}
+.nav-link:focus {
+    color: #17a2b8;
+}
+
 
 .second-navbar-li a {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: white;
     white-space: nowrap;
     font-size: large;
+    background-color: #001f2b;
 }
 
 /* Footer phantom main page */
@@ -597,7 +610,10 @@ audio {
     color: #17a2b8; /* text-info */
 }
 
-.login label, .login .error-message, .login input[type="email"], #id_remember {
+.login label,
+.login .error-message,
+.login input[type="email"],
+#id_remember {
     color: white;
 }
 
